Updated lecture list.

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -11,6 +11,8 @@
 
     - title: Multiple Sequence Alignment
       lecturer: Tim Vaughan
+      slide_credit: Alexei Drummond
+      date: 2017-03-08
 
 - week: 2
   lectures:
