--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -19,7 +19,7 @@
     - title: Hidden Markov Models
       lecturer: Tim Vaughan
 
-    - title: Phylogeny
+    - title: Phylogenetics
       lecturer: Alexei Drummond
 
     - title: Parsimony-based Phylogenetic Inference
