Added some slides for L4.

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -18,6 +18,7 @@
   lectures:
     - title: Hidden Markov Models
       lecturer: Tim Vaughan
+      date: 2017-03-13
 
     - title: Phylogenetics
       lecturer: Alexei Drummond
