Changed default reveal.history setting.

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ defaults:
                 center: false
                 controls: false
                 progress: false
-                history: false
+                history: true
                 center: false
                 mouseWheel: true
                 slideNumber: false
