Added credit for L5 slides.

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -22,7 +22,7 @@
 
     - title: Phylogenetics
       lecturer: Alexei Drummond
-      slide_credit: 
+      slide_credit: Some slides adapted from material provided by Prof Ziheng Yang, UCL
 
     - title: Parsimony-based Phylogenetic Inference
       lecturer: Alexei Drummond
