--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -37,7 +37,16 @@
 
     - title: Bayesian Phylogenetic Inference
 
-- week: 4-6
+- week: 4
   lectures:
     - title: The Coalescent
       lecturer: Alexei Drummond 
+
+    - title: Phylodynamics and the coalescent
+      lecturer: Alexei Drummond
+
+    - title: The multi-species coalescent
+
+- week: 5-6
+  lectures:
+    - title: Advanced topics in Bayesian phylogenetics
