--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -31,7 +31,7 @@
 
 - week: 3
   lectures:
-    - title: Maximum Likelihood Phylogenetic Inference
+    - title: Model-based Phylogenetic Inference
       lecturer: Tim Vaughan
       date: 2017-03-20
 
