Changed title of L13.

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -56,7 +56,7 @@
 
 - week: 5
   lectures:
-    - title: The Structured Coalescent
+    - title: Master Equations and The Structured Coalescent
       lecturer: Tim Vaughan
       date: 2017-04-03
 
